Updates from Overleaf

--- a/chap1-introduction.tex
+++ b/chap1-introduction.tex
@@ -16,7 +16,7 @@ Neutrinos were long thought to be massless, but results from the \gls{sk} collab
 \end{itemize}
 The Majorana nature of neutrinos would allow for neutrinoless double beta decay, a process which does not conserve lepton number \cite{neutrinoless_double_beta_decay}. Sterile neutrinos have been hinted at by a number of experiments and are expected to have right handed helicities which is in contrast to the active neutrinos which have all been observed to have left handed helicities \cite{White_Paper}. The confirmation of either of these would give direct evidence of physics beyond the \gls{sm}. All of these question are under active investigation by current and future neutrino experiments. 
 
-The focus of this thesis will be on the \gls{sbn} program which is currently under development with the main goal being to either confirm or refute the existence of light sterile neutrinos. The \gls{sbn} program is located at Fermilab and consists of three distinct \gls{lartpc} type detectors located along the \gls{bnb} beamline \cite{SBN_Proposal}. \gls{sbnd} will be the nearest detector to the beam source at a distance of a 110 m and is currently under construction with the expectation that data taking will begin in early 2024 \cite{sbnd_timeline}. The two other detectors which are part of the \gls{sbn} program are the \gls{microboone} detector at 470 m and the \gls{icarus} detector at 600 m from the beam source, both of which are currently taking data. As mentioned, the main goal of the program will be to search for eV scale sterile neutrinos, but there are numerous other aims which include, measuring neutrino-argon interactions (due to the close proximity of \gls{sbnd} to the beam source, the observed statistics will far exceed that of any current dataset), developing large scale \gls{lartpc} technology and the search for possible \gls{bsm} processes \cite{SBN_paper}. All of these will be crucial in the development and physics analysis of future \gls{lar} neutrino detectors such as the \gls{dune}. 
+The focus of this thesis will be on the \gls{sbn} program which is currently under development with the main goal being to either confirm or refute the existence of light sterile neutrinos. The \gls{sbn} program is located at Fermilab and consists of three distinct \gls{lartpc} type detectors located along the \gls{bnb} beamline \cite{SBN_Proposal}. The \gls{sbnd} will be the nearest detector to the beam source at a distance of a 110 m and is currently under construction with the expectation that data taking will begin in early 2024 \cite{sbnd_timeline}. The two other detectors which are part of the \gls{sbn} program are the \gls{microboone} detector at 470 m and the \gls{icarus} detector at 600 m from the beam source, both of which are currently taking data. As mentioned, the main goal of the program will be to search for eV scale sterile neutrinos, but there are numerous other aims which include, measuring neutrino-argon interactions (due to the close proximity of \gls{sbnd} to the beam source, the observed statistics will far exceed that of any current dataset), developing large scale \gls{lartpc} technology and the search for possible \gls{bsm} processes \cite{SBN_paper}. All of these will be crucial in the development and physics analysis of future \gls{lar} neutrino detectors such as the \gls{dune}. 
 
 The remaining content of this thesis begins with \ChapterRef{chap:Neutrino Physics}, which gives a brief overview of the ideas and experiments which have lead to the discovery of the three active neutrino flavours. This is then followed by a discussion of the key physics principles describing neutrino behaviour. Finally, the experimental results which are at odds with a 3 flavour paradigm and point towards the presence of sterile neutrinos are considered along with the theory that underpins their possible existence. 
 
