--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -81,6 +81,11 @@ The \nue appearance exclusion sensitivities from SBND show a stronger constraint
 
 %% I prefer to put these tables here rather than making the
 %% front matter seemingly interminable. No-one cares, anyway!
+
+% Rename the "List of ..." in the ToC.
+\renewcommand{\listfigurename}{List of Figures}
+\renewcommand{\listtablename}{List of Tables}
+
 \listoffigures
 \listoftables
 
