--- a/main.tex
+++ b/main.tex
@@ -59,9 +59,9 @@
   %\input{chap1-introduction}
   %\input{chap2-motivation_for_steriles}
   %\input{chap3-SBN_Program}
-  \input{chap4-Energy_Reco}
+  %\input{chap4-Energy_Reco}
   %\input{chap5-oscillation_inputs}
-  %\input{chap6-valor_analysis_2}
+  \input{chap6-valor_analysis_2}
   %\input{chap7-conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
   %\input{chap4}
