--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -21,11 +21,11 @@ Both the events for the \numu and \nue sample were generated using \gls{genie}v3
 \begin{tabular}{c rrrr}
 \multirow{2}{*}{Sample} & \multirow{2}{*}{Produced} & \multicolumn{3}{c}{Selected} \\ & & \gls{sbnd} & \gls{microboone} & \gls{icarus}  \\ \hline
 
-Intrinsic $\nue$ & $\sim$1,000,000    & ~$\sim 150,000$ & ~$\sim 140,000$ & ~$\sim 130,000$ \\
-Oscillated $\nu$ & $\sim$1,000,000    & ~$\sim 180,000$ & ~$\sim 150,000$ & ~$\sim 140,000$ \\
-$\numu$          & {Used \numu sample}& ~$\sim 2,000$ & ~$\sim 3,000$ & ~$\sim 3,000$ \\
-Dirt             & $\sim$10,000,000 & $\sim 80$ & ~$\sim 100$ & ~$\sim 300$ \\
-Cosmic           & $\sim$100,000    & ~$\sim 1$ & ~$0$ & ~$\sim 30$             
+Intrinsic $\nue$ & $\sim$1,000,000    & $\sim$150,000 & $\sim$140,000 & $\sim$130,000 \\
+Oscillated $\nu$ & $\sim$1,000,000    & $\sim$180,000 & $\sim$150,000 & $\sim$140,000 \\
+$\numu$          & {Used \numu sample}& $\sim$2,000 & $\sim$3,000 & $\sim$3,000 \\
+Dirt             & $\sim$10,000,000 & $\sim$80 & $\sim$100 & $\sim$300 \\
+Cosmic           & $\sim$100,000    & $\sim$1 & 0 & $\sim$30
 
 \end{tabular}
 \caption[Events generated and selected as part of the \nue sample.]{The number of events produced and selected for each sub-sample of the \nue analysis. The same number of events were produced in each of the three \gls{sbn} detectors.}
