Updates from Overleaf

--- a/chap1-introduction.tex
+++ b/chap1-introduction.tex
@@ -22,6 +22,6 @@ The remaining content of this thesis begins with \ChapterRef{chap:Neutrino Physi
 
 \ChapterRef{chap:SBN Program} then gives an overview of the \gls{sbn} program along with the general operating principles of a \gls{lartpc} and the \gls{bnb}. The individual detector specifics and the key components of \gls{sbnd}, \gls{microboone} and \gls{icarus} are discussed as well as the expected physics capabilities of the program as a whole. 
 
-The different algorithms for calculating the reconstructed \gls{em} shower energy that have been developed are presented in \ChapterRef{chap:Energy_Reco}. \gls{em} shower energy is an important quantity that is used in a number of areas, including calculating the reconstructed neutrino energy. The method that each of the three \gls{em} shower reconstruction algorithms that are available as part of the \textit{LArPandoraShower} suite of tools, the \textit{Shower Linear Energy tool}, the \textit{Shower Num Electrons Energy tool} and the \textit{Shower ESTAR Energy tool} use is outlined as well as comparing the reconstruction performance with truth information. The reconstruction performance is validated for showers arising from both electrons and photons as well as evaluating the performance as a function of true shower energy and the direction of a shower within the \gls{tpc}. 
+The different algorithms for calculating the reconstructed \gls{em} shower energy in \gls{sbnd} that have been developed are presented in \ChapterRef{chap:Energy_Reco}. \gls{em} shower energy is an important quantity that is used in a number of areas, including calculating the reconstructed neutrino energy. The method that each of the three \gls{em} shower reconstruction algorithms that are available as part of the \textit{LArPandoraShower} suite of tools, the \textit{Shower Linear Energy tool}, the \textit{Shower Num Electrons Energy tool} and the \textit{Shower ESTAR Energy tool} use is outlined as well as comparing the reconstruction performance with truth information. The reconstruction performance is validated for showers arising from both electrons and photons as well as evaluating the performance as a function of true shower energy and the direction of a shower within the \gls{tpc}. 
 
 The necessary inputs, choices, method and results for an oscillation analysis are outlined in \ChapterRef{chap:osc_inputs} and \ChapterRef{chap:VALOR}. First the \gls{mc} event production and selection are described followed by the systematic uncertainties that are considered. The VALOR framework is used to perform the oscillation analysis with an emphasis on the \nue appearance and \nue disappearance channels. Each oscillation channel is considered as an independent analysis and sensitivities are presented from various combinations of detectors and systematic uncertainties. These include exclusion contours and allowed regions for the statistical only case and the case where flux and interaction uncertainties have been included plus an investigation into the possible impact of additional efficiency uncertainties on the exclusion sensitivity. 
