--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -144,14 +144,14 @@ It should be noted that for massless particles, helicity is Lorentz invariant an
 
 \subsection{Weak Interactions and CP violation}
 
-The weak force is mediated by the charged $W^\pm$ and neutral $Z^0$ bosons. It is dubbed \textit{weak} because if the strong or \gls{em} forces are also present the weak force is usually subdominant. The active neutrinos only interact via the weak force (and gravity) which is one of the reasons they have been historically difficult to detect. 
+The weak force is mediated by the charged W$^\pm$ and neutral Z$^0$ bosons. It is dubbed \textit{weak} because if the strong or \gls{em} forces are also present the weak force is usually subdominant. The active neutrinos only interact via the weak force (and gravity) which is one of the reasons they have been historically difficult to detect. 
 
 The weak force has two associated types of interaction: \gls{cc} interactions which are mediated by the charged W boson and \gls{nc} interactions which are mediated by the neutral Z boson. The defining difference is that for \gls{cc} interactions current flows between the interacting fermions (i.e. charge is exchanged), whereas for \gls{nc} interactions, the total flow of charge between the interacting fermions is zero. The weak component of the \gls{sm} Lagrangian is therefore comprised of two terms, one representing \gls{cc} and one representing \gls{nc}. The \gls{cc} current, $j^{CC}_{weak}$,  and \gls{nc} current, $j^{NC}_{weak}$, components of each of these terms may be expressed as, 
 \begin{equation}\label{eqn:weak current}
 \begin{split}
     j^{CC}_{weak} &= \frac{g}{\sqrt{2}}\overline{\psi}\gamma^{\mu}P_L\psi, \\
     j^{NC}_{weak} &= \frac{g}{2\cos{\theta_W}}\sum_{i = \nu, l}
-    \overline{\psi}_i \gamma^\mu (g_V^i - g_A^i \gamma^5)\psi_i
+    \overline{\psi}_i \gamma^\mu (g_V^i - g_A^i \gamma^5)\psi_i, 
 \end{split}
 \end{equation}
 where $g$ is the weak coupling factor, $\theta_W$ is the Weinberg angle, $g_V$ is the vector coupling and $g_A$ is the axial coupling \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}\cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}\cite{PDG_2022}. The weak coupling is related to the Fermi Constant, $G_F$, and the boson masses such that,
@@ -273,7 +273,7 @@ By noting that the mass splitting, $\Delta m^2_{kj}$, is defined as
 \begin{equation}
     \Delta m^2_{kj} = m_k^2 - m_j^2
 \end{equation}
-and that for highly relativistic particles $t \approx L$, where L is known as the baseline (i.e. the distance the neutrino has travelled), the oscillation probability may be written as 
+and that for highly relativistic particles $t \approx L$, where \textit{L} is known as the baseline (i.e. the distance the neutrino has travelled), the oscillation probability may be written as 
 \begin{equation}
      P_{\nu_\alpha \rightarrow \nu_\beta}(L,E) = \sum_{k,j} U^*_{\alpha k} U_{\beta k} U_{\alpha j} U^*_{\beta j} e^{-i\frac{\Delta m^2_{kj}L}{2E}}.
 \end{equation}
