Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -399,7 +399,7 @@ The \gls{lsnd} experiment involved a close to 800 MeV proton beam which produced
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/MiniBooNE_excess.png}
-    \caption[MiniBooNE excess.]{The MiniBooNE excess from \nue CCQE events. The best fit line assumed two neutrino oscillations \cite{MiniBooNE_excess}.}
+    \caption[MiniBooNE excess.]{The MiniBooNE excess from \nue \gls{ccqe} events. The best fit line assumed two neutrino oscillations \cite{MiniBooNE_excess}.}
     \label{fig:MiniBooNE excess}
 \end{figure}
 \newpage
