--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -71,7 +71,7 @@ The event selections are performed in order to first identify \numu or \nue-like
 
 \subsection{\texorpdfstring{\nue Selection}{nue Selection}}\label{sec:nue_selection}
 
-The $\nue$ selection follows a similar basis to the $\numu$ selection described in section \ref{sec:numu_selection}, however different criteria for the selection were applied to beam induced TPC events, dirt events and cosmic events, each of which are outlined below. 
+The $\nue$ selection follows a similar basis to the $\numu$ selection described in section \ref{sec:numu_selection}, however, different criteria for the selection were applied to beam induced TPC events, dirt events and cosmic events, each of which are outlined below. 
 
 \subsubsection*{Beam induced active volume events}
 
