--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -12,7 +12,7 @@
 
 The \gls{sbn} program is comprised of three distinct \gls{lartpc} type detectors located at \gls{fermilab}. The three detectors are \gls{sbnd}, \gls{microboone} and \gls{icarus} and all three lie along the axis of the \gls{bnb}. In order to minimise systematic uncertainties, the three detectors share many of the same technologies. The general operating principles of a \gls{lartpc} are described in \SectionRef{sec:lartpc} and the specific details of each detector are discussed in \SectionRef{sec:SBND} (\gls{sbnd}), \SectionRef{sec:MicroBooNE} (\gls{microboone}) and \SectionRef{sec:ICARUS} (\gls{icarus}). The \gls{bnb} consists predominantly of muon neutrinos with energies of the order 1 GeV and is discussed in detail in \SectionRef{sec:BNB}. The three detectors are positioned at 110m, 470m and 600m from the neutrino beam source respectively \cite{SBN_paper}. 
 
-One of the primary aims of the \gls{sbn} program is to provide a definitive test to either confirm or refute the existence of light sterile neutrinos which have been hinted at by a number of experiments discussed in \SectionRef{subchap:Motivation for Sterile Neutrinos}. Other major aims of the \gls{sbn} program include investigating neutrino argon cross sections and developing large scale \gls{lartpc} technologies. The close proximity of \gls{sbnd} to the \gls{bnb} source means that \gls{sbnd} will observe neutrino argon interactions with high statistics allowing statistical uncertainties to be minimised and will allow for the exploration of rare channels such as neutrino-electron scattering. Both the development of \gls{lartpc} technology and an improved understanding of neutrino interaction cross-sections will be invaluable for future neutrino experiments such as \gls{dune} \cite{SBN_paper}.
+One of the primary aims of the \gls{sbn} program is to provide a definitive test to either confirm or refute the existence of light sterile neutrinos which have been hinted at by a number of experiments discussed in \SectionRef{subchap:Motivation for Sterile Neutrinos}. Other major aims of the \gls{sbn} program include investigating neutrino argon cross-sections and developing large scale \gls{lartpc} technologies. The close proximity of \gls{sbnd} to the \gls{bnb} source means that \gls{sbnd} will observe neutrino argon interactions with high statistics allowing statistical uncertainties to be minimised and will allow for the exploration of rare channels such as neutrino-electron scattering. Both the development of \gls{lartpc} technology and an improved understanding of neutrino interaction cross-sections will be invaluable for future neutrino experiments such as \gls{dune} \cite{SBN_paper}.
 
 
 \section{Liquid Argon Time Projection Chambers}\label{sec:lartpc}
@@ -39,7 +39,7 @@ The general design of a single chamber \gls{lartpc} is shown in \FigureRef{fig:l
     \label{fig:lartpc}
 \end{figure}
 
-Along with the global volume of a detector which is defined by its dimensions, there are usually two other volumes associated with \glspl{lartpc}; the \textit{active} volume and the \textit{fiducial} volume. The active volume is defined as the volume which is enclosed within the \gls{tpc} and is the volume of the detector which allows for event detection. The fiducial volume is not directly defined by the physical design of the detector, but is instead the region within the active volume where event reconstruction is thought to be well understood. Events occurring right at the edge of the \gls{tpc} may be difficult to reconstruct and are therefore poorly understood. Additionally, background events tend to occur close to the edge of the \gls{tpc}, so by only considering events within the fiducial volume, the percentage of well understood signal events is maximised \cite{PDG_2022}. The active and fiducial volumes used in each of the \gls{sbn} detectors is defined in \AppendixRef{app:Detector_Volumes}.
+Along with the global volume of a detector which is defined by its dimensions, there are usually two other volumes associated with \glspl{lartpc}: the \textit{active} volume and the \textit{fiducial} volume. The active volume is defined as the volume which is enclosed within the \gls{tpc} and is the volume of the detector which allows for event detection. The fiducial volume is not directly defined by the physical design of the detector, but is instead the region within the active volume where event reconstruction is thought to be well understood. Events occurring right at the edge of the \gls{tpc} may be difficult to reconstruct and are therefore poorly understood. Additionally, background events tend to occur close to the edge of the \gls{tpc}, so by only considering events within the fiducial volume, the percentage of well understood signal events is maximised \cite{PDG_2022}. The active and fiducial volumes used in each of the \gls{sbn} detectors is defined in \AppendixRef{app:Detector_Volumes}.
 
 \subsection{Detector effects}
 
@@ -76,7 +76,7 @@ In general, the diffusion in the transverse direction is greater than the diffus
 where $Q$ is the charge remaining after correcting for electron lifetime, $Q_0$ is the initial charge and $t$ is the drift time \cite{ArgoNeuT_electron_lifetime_paper}. The lowest electron lifetime (during a period where the purity was considered stable) that \gls{microboone} has observed is 18.0 ms \cite{microboone_electron_lifetime}. Currently, the \gls{sbnd} simulation uses a default value of 10.0 ms for the electron lifetime, whereas the \gls{icarus} simulation uses a value of 15.0 ms. By requiring that the maximum charge loss is only of the order 10\%, this results in a maximum drift distance (\gls{tpc} width) of $\sim1.5$ m. 
  
 \subsubsection{Recombination}
-When argon atoms are ionised, the resulting ionised electron may immediately recombine with a nearby argon ion instead of being separated by the electric field in the detector. This is known as the recombination effect and the magnitude of the effect is largely determined by the local electric field. A number of different approaches to model the recombination effect exist, however, for liquid argon detectors a form of the box model or Jaff\'{e} model are usually used \cite{LArTPC_book}.
+When argon atoms are ionised, the resulting ionised electron may immediately recombine with a nearby argon ion instead of being separated by the electric field in the detector. This is known as the recombination effect and the magnitude of the effect is largely determined by the local electric field. A number of different approaches to model the recombination effect exist, however, for liquid argon detectors, a form of the box model or Jaff\'{e} model are usually used \cite{LArTPC_book}.
 
 The Jaff\'{e} model is based on the idea that recombination depends on the charge density of both nearby electrons and ions. The model assumes a cylinder surrounding the ionisation track and recombination may occur between any of the ionised electrons and ions, not just the electron with its associated parent ion which is were the Jaff\'{e} model largely differs from earlier models \cite{Jaffe_model}. The recombination effect from the Jaff\'{e} model is given by 
 \begin{equation}\label{Jaffe}
@@ -93,7 +93,7 @@ where $\xi = \alpha Q_0/E$. $\alpha$ is a free parameter and $Q$ and $Q_0$ are d
 In addition to being model dependant, the exact recombination value is often presented as a function of dE/dx. For an electric field of 0.5 kV/cm, the recombination value has a maximum of $\sim0.7$ at a dE/dx value of $\sim1$ MeV/cm and falls to a minimum of $\sim0.1$ as the dE/dx value increases to $\sim30$ MeV/cm \cite{LArTPC_book}.
 
 \subsubsection{Space Charge}
-The electric field in a \gls{tpc} is usually designed to be uniform between the cathode and the anode, however, particularly for surface level detectors this often does not end up being the case. Cosmic muons may enter the detector ionising the argon atoms. The ionised electrons and argon ions then drift towards the anode and cathode respectively, however the drift time for the ions is much greater than the electron drift time. If the flux of cosmic muons entering the detector is sufficiently large, this results in a significant positive charge build up towards the cathode. This effect is known as \textit{space charge} and directly impacts the recombination effect since it is linked to the magnitude of local electric field as well as affecting the drifting electrons \cite{microboone_sce}.
+The electric field in a \gls{tpc} is usually designed to be uniform between the cathode and the anode, however, particularly for surface level detectors this often does not end up being the case. Cosmic muons may enter the detector ionising the argon atoms. The ionised electrons and argon ions then drift towards the anode and cathode respectively, however, the drift time for the ions is much greater than the electron drift time. If the flux of cosmic muons entering the detector is sufficiently large, this results in a significant positive charge build up towards the cathode. This effect is known as \textit{space charge} and directly impacts the recombination effect since it is linked to the magnitude of local electric field as well as affecting the drifting electrons \cite{microboone_sce}.
 
 The ion drift velocity, $\vec v$, is given by
 \begin{equation}
@@ -106,7 +106,7 @@ where $\mu$ is the ion mobility and $\vec E$ is the electric field. The build up
 \end{equation}
 where $\vec J = \rho \vec v$ and \textit{K} is the volume rate at which ion pairs are created \newline ($[K]~=~$~ion~pairs/volume/second) \cite{space_charge_math}. 
 
-With the simplified assumption that the build up of charge is constant (time-independent) and that the drift direction is only in the x direction which is the same as the electric field, \EquationRef{eq:space_charge_continuity} may be reduced to 
+With the simplified assumption that the build up of charge is constant (time-independent) and that the drift direction is only in the x-direction which is the same as the electric field, \EquationRef{eq:space_charge_continuity} may be reduced to 
 \begin{equation}
     \frac{d \rho v}{dx} = K.
 \label{eq:reduced_sapce_charge_continuity}
@@ -195,7 +195,7 @@ When particles interact via elastic scattering, the initial particles do not cha
     \nu_l + p \rightarrow \nu_l + p.
 \end{equation}
 
-Quasi-elastic scattering is similar to elastic scattering, however charge is exchanged and therefore the interaction is mediated by the W$^+$ boson. \gls{ccqe} interactions are defined by the production of a charged lepton plus a (semi-) stable baryon. The dominant form of these interactions occur when the incoming neutrino scatters off a neutron and is converted to its charged lepton counterpart whilst the neutron changes to a proton via
+Quasi-elastic scattering is similar to elastic scattering, however, charge is exchanged and therefore the interaction is mediated by the W$^+$ boson. \gls{ccqe} interactions are defined by the production of a charged lepton plus a (semi-) stable baryon. The dominant form of these interactions occur when the incoming neutrino scatters off a neutron and is converted to its charged lepton counterpart whilst the neutron changes to a proton via
 \begin{equation}
     \nu_l + n \rightarrow l^- + p.
 \end{equation}
@@ -210,10 +210,10 @@ whereas \gls{nc} interactions occur via,
 \begin{equation}
     \nu_l + N \rightarrow \nu_l + \Delta \rightarrow \nu_l + N +\pi.
 \end{equation}
-In both cases, \textit{N} represent some nucleon with $\Delta$ and $\pi$ being one of the possible Delta resonances and pions appropriate for a given interaction \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book} \cite{Measurement_of_the_Water_to_Scintillator_Charged-Current_Cross-Section_Ratio_for_Muon_Neutrinos_at_the_T2K_Near_Detector_thesis}. 
+In both cases, \textit{N} represents some nucleon with $\Delta$ and $\pi$ being one of the possible Delta resonances and pions appropriate for a given interaction \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book} \cite{Measurement_of_the_Water_to_Scintillator_Charged-Current_Cross-Section_Ratio_for_Muon_Neutrinos_at_the_T2K_Near_Detector_thesis}. 
 
 \subsection*{2 Particles 2 Holes}
-Within the nuclear environment, there is a correlation between the distribution of nucleons. Therefore, some of the nucleons are bounded in pairs and these bound nucleon pairs may be thought of as being bound due to the exchange of virtual mesons.\footnote{This exchange of mesons is sometimes also known as a \gls{mec}. \glspl{mec} are a subset of \gls{2p2h} interaction where the W boson couples directly to the exchanged meson, however, these terms are sometimes used interchangeably.} In this type of interaction, multiple nucleons are excited in a quasi-elastic fashion. The boson may couple to either a nucleon or the meson that's being exchanged. This leads to a number of possibilities such as; 1) the boson couples to the exchanged meson (pion-in-flight diagram), 2) the boson couples at the vertex between the nucleon and exchanged meson (seagull diagram), 3) the meson exchange occurs with a virtual intermediate nucleon to which the boson couples, 4) as in case 3), but the intermediate particle is a Delta resonance instead of a nucleon. Feynman diagrams of these 4 possibilities are shown in \FigureRef{fig:mec_feynman_diagrams} \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book}\cite{Adjusting_neutrino_interaction_models_and_evaluating_uncertainties_using_NOvA_near_detector_data}
+Within the nuclear environment, there is a correlation between the distribution of nucleons. Therefore, some of the nucleons are bounded in pairs and these bound nucleon pairs may be thought of as being bound due to the exchange of virtual mesons.\footnote{This exchange of mesons is sometimes also known as a \gls{mec}. \glspl{mec} are a subset of \gls{2p2h} interaction where the W boson couples directly to the exchanged meson, however, these terms are sometimes used interchangeably.} In this type of interaction, multiple nucleons are excited in a quasi-elastic fashion. The boson may couple to either a nucleon or the meson that is being exchanged. This leads to a number of possibilities such as; 1) the boson couples to the exchanged meson (pion-in-flight diagram), 2) the boson couples at the vertex between the nucleon and exchanged meson (seagull diagram), 3) the meson exchange occurs with a virtual intermediate nucleon to which the boson couples, 4) as in case 3), but the intermediate particle is a Delta resonance instead of a nucleon. Feynman diagrams of these 4 possibilities are shown in \FigureRef{fig:mec_feynman_diagrams} \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book}\cite{Adjusting_neutrino_interaction_models_and_evaluating_uncertainties_using_NOvA_near_detector_data}
 \cite{Seagull_and_pion-in-flight_mec}.
 
 \begin{figure}
@@ -287,7 +287,7 @@ Within the nuclear environment, there is a correlation between the distribution 
 
 \newpage
 \subsection*{Deep Inelastic Scattering}
-At even higher energies than those for resonant interactions ($>\mathcal{O}$(5 GeV)), \gls{dis} interactions become dominant. In \gls{dis} interactions, the neutrino scatters off individual quarks rather than the nucleon as a whole. This results in the break-up of the nucleon, but since the strong force prevents single quarks from existing a hadronic shower \textit{X}, is produced \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics} \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book}. A \gls{cc} \gls{dis} interaction occurs via
+At even higher energies than those for resonant interactions ($>\mathcal{O}$(5 GeV)), \gls{dis} interactions become dominant. In \gls{dis} interactions, the neutrino scatters off individual quarks rather than the nucleon as a whole. This results in the break-up of the nucleon, but since the strong force prevents single quarks from existing, a hadronic shower \textit{X} is produced \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics} \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book}. A \gls{cc} \gls{dis} interaction occurs via
 \begin{equation}
     \nu_l + N \rightarrow l^- + X,
 \end{equation}
@@ -413,7 +413,7 @@ This is an elastic process that has both a \gls{cc} and \gls{nc} component, howe
 \end{feynman}
 }
 \end{subfigure}
-\caption[Feynman diagrams of the \gls{cc} processes most commonly expected in \gls{sbn}.]{Feynman diagrams of the \gls{cc} processes most commonly expected in \gls{sbn}. $\nu_l$ corresponds to the neutrino with leptonic flavour \textit{l}, with \textit{l} typically being either an electron or a muon. $\Delta$ denotes one of the possible Delta resonances, \textit{N} denotes a nucleon, \textit{X}, denotes some set of final hadrons and \textit{A} denotes a nucleus.}
+\caption[Feynman diagrams of the \gls{cc} processes most commonly expected in \gls{sbn}.]{Feynman diagrams of the \gls{cc} processes most commonly expected in \gls{sbn}. $\nu_l$ corresponds to the neutrino with leptonic flavour \textit{l}, with \textit{l} typically being either an electron or a muon. $\Delta$ denotes one of the possible Delta resonances, \textit{N} denotes a nucleon, \textit{X} denotes some set of final hadrons and \textit{A} denotes a nucleus.}
 \label{fig:CC_Feynman_diagrams}
 \end{figure}
 
@@ -510,7 +510,7 @@ This is an elastic process that has both a \gls{cc} and \gls{nc} component, howe
 \end{feynman}
 }
 \end{subfigure}
-\caption[Feynman diagrams of the \gls{nc} processes most commonly expected in \gls{sbn}.]{Feynman diagrams of the \gls{nc} processes most commonly expected in \gls{sbn}. $\nu_l$ corresponds to the neutrino with leptonic flavour \textit{l}, with \textit{l} typically being either an electron or a muon. $\Delta$ denotes one of the possible Delta resonances, \textit{N} denotes a nucleon, \textit{X}, denotes some set of final hadrons and \textit{A} denotes a nucleus.}
+\caption[Feynman diagrams of the \gls{nc} processes most commonly expected in \gls{sbn}.]{Feynman diagrams of the \gls{nc} processes most commonly expected in \gls{sbn}. $\nu_l$ corresponds to the neutrino with leptonic flavour \textit{l}, with \textit{l} typically being either an electron or a muon. $\Delta$ denotes one of the possible Delta resonances, \textit{N} denotes a nucleon, \textit{X} denotes some set of final hadrons and \textit{A} denotes a nucleus.}
 \label{fig:NC_Feynman_diagrams}
 \end{figure}
 
@@ -523,7 +523,7 @@ This is an elastic process that has both a \gls{cc} and \gls{nc} component, howe
 \begin{figure}[!h]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap3/SBND.jpg}
-    \caption[Schematic of the SBN detector.]{Schematic showing the dimensions of the SBND detector. The \gls{cpa}, \glspl{apa} (only one is labelled) and field cage are shown. The \gls{pds} is not shown, but 12 squares on the near \gls{apa} represent the location where the \gls{pds} boxes will be positioned. \cite{LArTPC_review}}
+    \caption[Schematic of the SBN detector.]{Schematic showing the dimensions of the SBND detector. The \gls{cpa}, \glspl{apa} (only one is labelled) and field cage are shown. The \gls{pds} is not shown, but the 12 squares on the near \gls{apa} represent the location where the \gls{pds} boxes will be positioned. \cite{LArTPC_review}}
     \label{fig:sbnd_schematic}
 \end{figure}
 
@@ -539,7 +539,7 @@ This is an elastic process that has both a \gls{cc} and \gls{nc} component, howe
 \end{figure}
 
 \subsection*{Photon Detection System}
-The \gls{pds} consists of a total of 24 \textit{boxes}, 12 of which will be mounted behind each \gls{apa}. Each box houses 5 \glspl{pmt} and 8 \glspl{arapuca} (specifically, X-ARAPUCA's are used which are an advancement over the initial \gls{arapuca} design) as shown in \FigureRef{fig:pds_box}. The 4 outer \glspl{pmt} of each box are coated with \gls{tpb} whilst the central one remains uncoated. The scintillation light produced by argon has wavelengths in the \gls{vuv} region, however the \glspl{pmt} are only able to detect visible light. The \gls{tpb} coating shifts the wavelength of the \gls{vuv} light into the visible region allowing it to be detected. Therefore, the coated \glspl{pmt} are sensitive to both visible and \gls{vuv} light whilst the uncoated \glspl{pmt} are only sensitive to visible light \cite{LArTPC_review}. 
+The \gls{pds} consists of a total of 24 \textit{boxes}, 12 of which will be mounted behind each \gls{apa}. Each box houses 5 \glspl{pmt} and 8 \glspl{arapuca} (specifically, X-ARAPUCA's are used which are an advancement over the initial \gls{arapuca} design) as shown in \FigureRef{fig:pds_box}. The 4 outer \glspl{pmt} of each box are coated with \gls{tpb} whilst the central one remains uncoated. The scintillation light produced by argon has wavelengths in the \gls{vuv} region, however, the \glspl{pmt} are only able to detect visible light. The \gls{tpb} coating shifts the wavelength of the \gls{vuv} light into the visible region allowing it to be detected. Therefore, the coated \glspl{pmt} are sensitive to both visible and \gls{vuv} light whilst the uncoated \glspl{pmt} are only sensitive to visible light \cite{LArTPC_review}. 
 
 \glspl{arapuca} are a novel light trap which consist of a box where the internal surfaces are highly reflective. The surface of the \gls{arapuca} which faces the incoming light consists of dichroic filter with a wavelength shifter either side of the filter. The wavelength of the light which is incident on the outermost shifter is shifted such that it may pass through the dichroic filter and after passing through the filter the light is again wavelength shifted so that it may no longer pass through the filter and thus remains trapped in the \gls{arapuca}. A schematic of the \gls{arapuca} design is shown on the left of \FigureRef{fig:arapuca}. The inside of the \gls{arapuca} module contains a \gls{sipm} photo-sensor in order to detect the light. Due to the highly reflective nature of the inside of the \gls{arapuca}, only a small region needs to be exposed to a photo-sensor in order to detect the trapped photons \cite{ARAPUCA}. The X-ARAPUCA improves on the initial design by replacing the inner wavelength shifter with an acrylic slab with the wavelength shifter implanted in the slab and the photo-sensor being directly attached to the slab. Light entering the X-ARAPUCA may be detected in same way as was done in the original \gls{arapuca} (\FigureRef{fig:arapuca}: Left), however the photons may also become trapped in the slab by total internal reflection and travel within the slab to the photo-sensor (\FigureRef{fig:arapuca}: Middle) or if the light enters at a large angle, the photons may become trapped between the surface of the slab and the filter and will travel to the photo-sensor without ever entering the slab (\FigureRef{fig:arapuca}:~Right). The middle scenario of \FigureRef{fig:arapuca} represents a direct improvement over the original \gls{arapuca} design because the number of reflections on the internal sides of the X-ARAPUCA module is reduced which in turn increases the photon detection efficiency \cite{X-ARAPUCA}. 
 
@@ -561,7 +561,7 @@ Another component of the \gls{pds} is covering each side of the \gls{cpa} with a
 
 \section{MicroBooNE}\label{sec:MicroBooNE}
 
-The \gls{microboone} detector is located slightly upstream of its predecessor, \gls{miniboone}. The detectors are at 470 m and 541 m from the \gls{bnb} source respectively. The Principal design goal of \gls{microboone} is to investigate the low energy excess of events observed by \gls{miniboone} and it began its operations in 2015 were it was initially used as a stand alone detector before becoming part of the larger \gls{sbn} program \cite{microboone_detector}.
+The \gls{microboone} detector is located slightly upstream of its predecessor, \gls{miniboone}. The detectors are at 470 m and 541 m from the \gls{bnb} source respectively. The principal design goal of \gls{microboone} is to investigate the low energy excess of events observed by \gls{miniboone} and it began its operations in 2015 were it was initially used as a stand alone detector before becoming part of the larger \gls{sbn} program \cite{microboone_detector}.
 
 \begin{figure}[h!]
     \centering
@@ -571,7 +571,7 @@ The \gls{microboone} detector is located slightly upstream of its predecessor, \
     \label{fig:microboone}
 \end{figure}
 
-The \gls{microboone} detector consists of a single \gls{tpc} enclosed within a cryostat as is shown in \FigureRef{fig:microboone}. The \gls{tpc} has dimensions of (2.560, 2.325, 10.368)~m and is orientated such that the z direction is along the neutrino beam line with the cathode to the left of the beam and the anode to the right. The active volume is defined as the volume enclosed by the \gls{lartpc} field cage which has a liquid argon mass of 90 tonnes out of a total 170 tonnes. The \gls{apa} consists of three wire planes with the wires on the two induction planes orientated at $\pm 60^{\circ}$ to the vertical and the wires of the collection plane orientated vertically. Both the wire plane spacing and the wire pitch of each plane is 3 mm. Unlike \gls{sbnd} and \gls{icarus}, the nominal electric field in \gls{microboone} is 273 V/cm. The light collection system consists of a series of 32 \glspl{pmt} and 4 lightguide paddles which are located directly behind the anode planes. The lightguides have a large collection area and their purpose is to guide light to the \glspl{pmt} (the lightguide paddles were disfavoured once the ARAPUCA technology was developed.)\cite{microboone_detector}.
+The \gls{microboone} detector consists of a single \gls{tpc} enclosed within a cryostat as is shown in \FigureRef{fig:microboone}. The \gls{tpc} has dimensions of (2.560, 2.325, 10.368)~m and is orientated such that the z-direction is along the neutrino beam line with the cathode to the left of the beam and the anode to the right. The active volume is defined as the volume enclosed by the \gls{lartpc} field cage which has a liquid argon mass of 90 tonnes out of a total 170 tonnes. The \gls{apa} consists of three wire planes with the wires on the two induction planes orientated at $\pm 60^{\circ}$ to the vertical and the wires of the collection plane orientated vertically. Both the wire plane spacing and the wire pitch of each plane is 3 mm. Unlike \gls{sbnd} and \gls{icarus}, the nominal electric field in \gls{microboone} is 273 V/cm. The light collection system consists of a series of 32 \glspl{pmt} and 4 lightguide paddles which are located directly behind the anode planes. The lightguides have a large collection area and their purpose is to guide light to the \glspl{pmt} (the lightguide paddles were disfavoured once the ARAPUCA technology was developed.)\cite{microboone_detector}.
 
 \gls{microboone} is also considered a surface level detector being only $\sim 6$ m underground and as there is no overburden present, a large flux of cosmic rays are observed. A \gls{crt} system similar to the one described in \SectionRef{sec:SBND} for \gls{sbnd} was implemented. The \gls{crt} system consists of 73 scintillating modules, however it is only sensitive to the four sides of the X and Y coordinates of the detector \cite{microboone_crt}. 
 
@@ -582,7 +582,7 @@ The \gls{icarus} detector was first operated in 2010 and  located at the Gran Sa
 
 The \gls{icarus} detector consists of two \textit{modules} within a single cryostat with each module containing two \glspl{tpc}. A schematic of this design is shown in \FigureRef{fig:icarus}. Similar to \gls{sbnd}, the two \glspl{tpc} within each module share a common cathode. The dimensions of each module are (3.6, 3.9, 19.6) m and the cryostat contains 760 tonnes of liquid argon with an active volume of 476 tonnes.  Again, the \glspl{apa} consists of three wire planes with a wire plane spacing and wire pitch of 3 mm. In contrast to \gls{sbnd} and \gls{microboone} however, the wire planes are orientated horizontally for the first induction plane and at $\pm 60^\circ$ for the second induction plane and the collection plane. The choice of having a horizontal wire plane is due to \gls{icarus} being initially designed to detect cosmic rays which would predominantly enter the detector from above and therefore be travelling perpendicular to the horizontal. The nominal electric field in each of the \glspl{tpc} is 500 V/m \cite{SBN_Proposal}. 
 
-The light collection system for \gls{icarus} is comprised of a series of 74 \glspl{pmt} positioned behind the wire planes. The layout of the \glspl{pmt} is however asymmetric with the east module having a $3 \times 9$ array of \glspl{pmt} for each \gls{tpc} whereas the two \glspl{tpc} in the west module have a single row of 9 \glspl{pmt} plus two additional \glspl{pmt} located centrally above and below the main row in the right chamber. Since the light is again produced with wavelengths in the \gls{vuv} region, the \glspl{pmt} are coated with \gls{tpb} in order to shift the wavelength into the visible region \cite{SBN_Proposal}.  
+The light collection system for \gls{icarus} is comprised of a series of 74 \glspl{pmt} positioned behind the wire planes. The layout of the \glspl{pmt} is, however, asymmetric with the east module having a $3 \times 9$ array of \glspl{pmt} for each \gls{tpc} whereas the two \glspl{tpc} in the west module have a single row of 9 \glspl{pmt} plus two additional \glspl{pmt} located centrally above and below the main row in the right chamber. Since the light is again produced with wavelengths in the \gls{vuv} region, the \glspl{pmt} are coated with \gls{tpb} in order to shift the wavelength into the visible region \cite{SBN_Proposal}.  
 
 \begin{figure}[h!]
     \centering
@@ -599,7 +599,7 @@ The \gls{crt} for the vertical sides are again outside the \gls{tpc} and behind 
 
 The \gls{sbn} program was designed with the aim of resolving the contentious results observed by a number of experiments as was discussed in \SectionRef{subchap:Motivation for Sterile Neutrinos}. Since it was purposely planned with this in mind, the \gls{sbn} program has a number of advantages over previous experiments in the hopes of detecting eV scale sterile neutrinos: it has a multi detector design, the near and far detector are positioned such that the oscillation signal is close to maximal for an expected set of oscillation parameters, the detectors use the same technology and have the same target medium \cite{SBN_paper}. 
 
-The top two plots of \FigureRef{fig:osc_probability} show the expected oscillation probability for the \nue appearance channel as a function of the baseline for two sets of oscillation parameters, $(\sin^2{2\theta_{\mu e}}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ and a neutrino energy of 700 MeV. The neutrino energy corresponds to the peak energy of the \gls{bnb} and the oscillation points are chosen as the upper and lower limits of the global \nue appearance data. In both cases there is a clear difference in the oscillation probability between the near and far detector showing that the \gls{sbn} program is sensitive to oscillations within this parameter range \cite{SBN_paper}. The bottom two plots show the oscillation probability for the same two oscillation points as a function of neutrino energy for baselines of 110 m and 600 m. The ratio of the oscillation probability at 600 m to that at 110 m is also shown. Again there is a clear difference in the oscillation probability for most energies showing that the \gls{sbn} program is sensitive to a wide range of neutrino energies \cite{SBN_paper}. The \nue appearance oscillation sensitivity constructed at the time of the proposal is shown in \FigureRef{fig:SBN_proposal_sensitivity}. These contours include the relevant backgrounds and systematic uncertainties with the exception of detector systematics. 
+The top two plots of \FigureRef{fig:osc_probability} show the expected oscillation probability for the \nue appearance channel as a function of the baseline for two sets of oscillation parameters, $(\sin^2{2\theta_{\mu e}}, ~\Delta m^2_{41}) = (0.015, ~0.3~\text{eV}^2), (0.002, ~1.5~\text{eV}^2)$ and a neutrino energy of 700 MeV. The neutrino energy corresponds to the peak energy of the \gls{bnb} and the oscillation points are chosen as the upper and lower limits of the global \nue appearance data. In both cases there is a clear difference in the oscillation probability between the near and far detector showing that the \gls{sbn} program is sensitive to oscillations within this parameter range \cite{SBN_paper}. The bottom two plots show the oscillation probability for the same two oscillation points as a function of neutrino energy for baselines of 110 m and 600 m. The ratio of the oscillation probability at 600 m to that at 110 m is also shown. Again, there is a clear difference in the oscillation probability for most energies showing that the \gls{sbn} program is sensitive to a wide range of neutrino energies \cite{SBN_paper}. The \nue appearance oscillation sensitivity constructed at the time of the proposal is shown in \FigureRef{fig:SBN_proposal_sensitivity}. These contours include the relevant backgrounds and systematic uncertainties with the exception of detector systematics. 
 
 As \FigureRef{fig:osc_probability} shows, \gls{sbnd} will observe no or very few oscillated events and will give a measure of the absolute flux and interaction cross-section whereas both \gls{microboone} and \gls{icarus} are able to detect oscillated events with significant probability. Typically the \gls{bnb} flux uncertainties and interaction cross-section uncertainties are fairly large, however, since \gls{sbnd}, \gls{microboone} and \gls{icarus} use the same
 interaction medium and the same technology to detect interactions, the uncertainties may be constrained \cite{SBN_paper}.
@@ -619,13 +619,13 @@ interaction medium and the same technology to detect interactions, the uncertain
 \end{figure}
 
 \newpage
-This main goal of the \gls{sbn} program revolves around sterile neutrino oscillation analyses, however the close proximity of the \gls{sbn} detectors and in particular \gls{sbnd} to the neutrino beam source will allow for a high statistics study of neutrino argon interactions. This will provide valuable information for future liquid argon based experiments such as \gls{dune}. \gls{sbnd} is expected to observe on the order of 2 million neutrino \gls{cc} interactions a year which is sufficient to be able to minimise the associated uncertainty to a point such that systematic uncertainties become dominant. As the \gls{bnb} consists predominantly of \numu, most events will also be \numu based, however the \nue fraction of the \gls{bnb} is sufficient to expect 12,000 \nue events a year in \gls{sbnd} which is enough to perform both inclusive and exclusive analyses. There is also the opportunity to measure rare channels with a big increases in statistics or possibly even for the first time such as final states involving hyperons or $\nue \rightarrow \nue$ elastic scattering \cite{SBN_paper} \cite{light_dark_matter}.
+This main goal of the \gls{sbn} program revolves around sterile neutrino oscillation analyses, however, the close proximity of the \gls{sbn} detectors and in particular \gls{sbnd} to the neutrino beam source will allow for a high statistics study of neutrino argon interactions. This will provide valuable information for future liquid argon based experiments such as \gls{dune}. \gls{sbnd} is expected to observe on the order of 2 million neutrino \gls{cc} interactions a year which is sufficient to be able to minimise the associated uncertainty to a point such that systematic uncertainties become dominant. As the \gls{bnb} consists predominantly of \numu's, most events will also be \numu based, however the \nue fraction of the \gls{bnb} is sufficient to expect 12,000 \nue events a year in \gls{sbnd} which is enough to perform both inclusive and exclusive analyses. There is also the opportunity to measure rare channels with a big increases in statistics or possibly even for the first time such as final states involving hyperons or $\nue \rightarrow \nue$ elastic scattering \cite{SBN_paper} \cite{light_dark_matter}.
 
 The large event rate and the high resolution event reconstruction provided may allow the \gls{sbn} program to be sensitive to \gls{bsm} physics other than sterile neutrino oscillations \cite{SBN_paper}. The potential areas include, but are not limited to,
 \begin{itemize}
-    \item Light Dark Matter - Assuming a dark matter particle has an associated light mediator particle which interacts with quarks, the high intensity proton beam will produce a dark matter beam alongside neutrinos. The dark matter particles will propagate to the detectors alongside the neutrinos where they may scatter off the argon nuclei. Neutrinos will however represent a large background in such search \cite{SBN_paper}. 
+    \item Light Dark Matter - Assuming a dark matter particle has an associated light mediator particle which interacts with quarks, the high intensity proton beam will produce a dark matter beam alongside neutrinos. The dark matter particles will propagate to the detectors alongside the neutrinos where they may scatter off the argon nuclei. Neutrinos will however represent a large background in such a search \cite{SBN_paper}. 
     \item Large Extra Dimensions - The neutrino mass scale could be explained by the presence of additional dimensions. The right handed neutrinos would be able to propagate in the extra dimensions whilst the active neutrinos would be confined to the standard dimensions \cite{SBN_paper}. 
-    \item Heavy Sterile Neutrinos - If heavy sterile neutrinos such as those present in the seesaw-mechanism discussed in \SectionRef{sec:seesaw_mechanism} are of an MeV mass scale, they may be produced in the \gls{bnb} vie meson decay. They would then propagate along the beam line and their decay products may be observed in the detectors \cite{SBN_paper}\cite{MeV_scale_sterile_neutrino}.
+    \item Heavy Sterile Neutrinos - If heavy sterile neutrinos such as those present in the seesaw-mechanism discussed in \SectionRef{sec:seesaw_mechanism} are of an MeV mass scale, they may be produced in the \gls{bnb} via meson decay. They would then propagate along the beam line and their decay products may be observed in the detectors \cite{SBN_paper}\cite{MeV_scale_sterile_neutrino}.
     \item Dark Neutrinos - A beam neutrino interacts with an argon nucleus and scatters to a dark neutrino. The dark neutrino decays to a dark boson (and neutrino) and in turn the dark boson decays to an \positron \electron pair. This mechanism could provide an explanation to the \gls{miniboone} low energy excess \cite{SBN_paper}\cite{dark_neutrino}. 
 \end{itemize}
 
